# vr

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.markdown  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  adsr.h  app.cpp  cache_isolated.h  cds.vcxproj  cds.vcxproj.filters  controllers.cpp  controllers.h  distortion.cpp  distortion.h  error.h  framework.h  framework.vcxproj  framework.vcxproj.filters  gl.cpp  gl.h  gl_types-x.h  glm.h  grammar.h  gui.cpp  gui.h  gui_direction.h  half.h  hammersley.h  math.h  math_constexpr.h  mesh.h  noncopyable.h  obj.cpp  obj.h  openvr.cpp  opt.h  (+35 more)
assets/: assets.vcxitems
core/: GLEW.props  OpenVR.props  SDL2.props  Win32.props  Win64.props  app.cpp  app.h  core.vcxproj  core.vcxproj.filters  distortion.cpp  distortion.h  eye.h  filename.h  gl_util.cpp  gl_util.h  log.cpp  log.h  main.cpp  memory.h  model.cpp  model.h  noncopyable.cpp  noncopyable.h  proxy.h  rendermodel.cpp  rendermodel.h  resource.h  shader.cpp  shader.h  signal.h  tracker.cpp  tracker.h  util.cpp  util.h  vr.h  window.cpp  window.h
data/: water_absorption_spectrum.txt
framework/: apply.h  error.h  fmt.h  framework.h  framework.vcxitems  framework.vcxitems.filters  gl.cpp  gl.h  glew.h  openvr.cpp  openvr.h  openvr_gl_model.h  openvr_system.cpp  openvr_system.h  sdl.cpp  sdl.h  sdl_gl_window.cpp  sdl_gl_window.h  sdl_system.h  sdl_window.cpp  sdl_window.h  signal.h  spdlog.h  std.h  stdafx.h  utf8.h
framework-static-win32/: README.txt  framework-static-win32.vcxproj  framework-static-win32.vcxproj.filters  imgui_table.h
proc/: aligned_allocator.cpp  aligned_allocator.h  alloca_array.h  app.cpp  app.h  apply.h  bloom.h  cds.h  chase_lev_deque.h  circular_array.h  composition.h  config.h  controllers.cpp  controllers.h  distortion.cpp  distortion.h  epoch.cpp  epoch.h  error.h  filesystem.h  fmt.h  gl.cpp  glew.h  gui.cpp  gui.h  gui_direction.h  gui_table.h  half.h  imconfig.h  imgui.ini  imgui_impl.cpp  imgui_impl.h  imgui_log.txt  main.cpp  math.h  oculus.h  openal.cpp  openal.h  openvr.h  openvr_gl_model.h  (+31 more)
properties/: Debug.props  GLEW.props  OpenVR.props  Release.props  SDL2.props  ThirdParty.props  Win32.props  Win64.props
scene/: pathtools.cpp  pathtools.h  scene.vcxproj  scene.vcxproj.filters  scene_main.cpp
shaders/: aabb.glsl  approx.glsl  brdf.glsl  color.glsl  common.glsl  controllers.frag  cotangent.glsl  distortion_warp.frag  dual_quat.glsl  frustum.glsl  gui.frag  mesh.vert  oct.glsl  plane.glsl  poppy.glsl  poppy_scan.comp  post_blur_h.frag  post_downsample.frag  post_lensflare.glsl  post_tonemap.frag  quat.glsl  rendermodel.frag  rendermodel.vert  scan.glsl  screw.glsl  seascape.glsl  skybox.frag  skybox.vert  sphere.glsl  spherical_harmonics.glsl  succinct.glsl  terrain.glsl  uniforms.h
(+136 files in other folders)
